# ntd-model-trachoma

./: .buildinfo  .gitignore  .vimrc  ExampleWIthYearlyBetas.ipynb  ExampleWithYearlyBetas.py  LICENSE  MANIFEST.in  Pipfile  README.md  Survey_design.docx  TestMainSimFunction.ipynb  TestNewMDAMethod.ipynb  asdfdfaasdfdIHMEOuts.csv  genindex.html  index.html  investigate_gamma_distributed_risk.ipynb  objects.inv  pyproject.toml  run_example.ipynb  search.html  searchindex.js  setup.py  simple_example.py  trachoma_run.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
_sources/: index.rst.txt
conda/: meta.yaml
files/: InputBet_scen1.csv  InputMDA_scen1.csv  InputMDA_scen2.csv  InputMDA_scen3.csv  InputMDA_scen4a.csv  InputMDA_scen4b.csv  InputMDA_scen4c.csv  InputMDA_scen5a.csv  InputMDA_scen5b.csv  InputMDA_scen5c.csv  InputMDA_scen6b.csv  InputMDA_scen6c.csv  OutputPrev_scen1.csv  OutputPrev_scen2.csv  OutputPrev_scen3.csv  OutputPrev_scen4a.csv  OutputPrev_scen4b.csv  OutputPrev_scen4c.csv  OutputPrev_scen5a.csv  OutputPrev_scen5b.csv  OutputPrev_scen5c.csv  OutputPrev_scen6b.csv  OutputPrev_scen6c.csv
output/: analyze_ihme_ipm_data.R  ihme_trachoma.R  ipm_trachoma.R  population_all_IUs.csv  trachomaIUs.csv
scripts/: cloud-run-cmds  create-gcp-instances-for-groups  create-historical-summaries.py  create-instances  create-iu-level-csv.py  gcp-create-instances-for-groups  gcp-region-to-group  gcp-run-groups-on-instances  group-to-region  nohup-group.bash  run_all_groups.bash  run_group.py
tests/: endtoendIHMEOuts.csv  endtoendIPMOuts.csv  (+15 more)
(+41 files in other folders)
